--- a/.env.local
+++ b/.env.local
@@ -26,3 +26,12 @@ APP_SECRET=39f01930d016197c8559c3f69cb36048
 DATABASE_URL="mysql://root:root@localhost:3306/pasdequartier?serverVersion=5.7"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+# MAILER_DSN=smtp://8ac777f7c8d3db:5481e84ae400a0@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
+###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+MAILER_DSN=gmail://calicot.game@gmail.com:zclkugavlwuxjjsf@default?verify_peer=0
+###< symfony/google-mailer ###
