--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "doctrine/doctrine-bundle": "^2.2",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.8",
+        "easycorp/easyadmin-bundle": "^3.2",
         "gregwar/captcha-bundle": "^2.1",
         "sensio/framework-extra-bundle": "^6.0",
         "symfony/asset": "5.2.*",
@@ -19,6 +20,8 @@
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.2.*",
         "symfony/framework-bundle": "5.2.*",
+        "symfony/google-mailer": "5.2.*",
+        "symfony/mailer": "5.2.*",
         "symfony/proxy-manager-bridge": "5.2.*",
         "symfony/security-bundle": "5.2.*",
         "symfony/twig-bundle": "5.2.*",
